# Flowers-OL

./: .Gitignore  .dockerignore  .flake8.ini  .gitignore  .gitmodules  Dockerfile  Dockerfile_local_dev  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
flowers-ol/: cal_stan_accuracy_rt.py  enumeration_ana_results.py  get_cog_assessment_results.py  get_psychometrics.py  get_zpdes_images.py  get_zpdes_trajectory.py  gonogo_ana_results.py  logs.txt  manage.py  moteval_ana_results.py  taskswitch_ana_results.py
flowers-ol/demo_app/: urls.py  views.py
flowers-ol/experiment_manager_app/: admin.py  apps.py  forms.py  models.py  translate.py  urls.py  utils.py  views.py
flowers-ol/flowers-ol/: asgi.py  settings.py  urls.py  wsgi.py
flowers-ol/interface_app/: admin.py  forms.py  models.py  urls.py  utils.py  validators.py
flowers-ol/jold_app/: admin.py  apps.py  urls.py  utils.py  views.py
flowers-ol/jold_ll_app/: admin.py  apps.py  excluded_items.json  forms.py  models.py  urls.py  views.py
flowers-ol/manager_app/: admin.py  apps.py  forms.py  models.py  tests.py  translation.py  urls.py  utils.py  validators.py  views.py
flowers-ol/mot_app/: admin.py  apps.py  forms.py  get_cog_assessment_results.py  get_idle_time.py  get_participant_progression.py  models.py  settings.py  tests.py  translation.py  urls.py  utils.py  views.py
interface_experimentation/: manage.py
mot_project/: conftest.py  manage.py  mot_db  mot_db~develop  pytest.ini  setup.sh
mot_results/: app.py  main.py
server/: nginx.conf
tests/: conftest.py  pytest.ini
(+602 files in other folders)
